[package]
name = "clipboard2png"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4", default-features=false, features = ["std", "derive"] }
image = {version="0.24", default-features=false, features = ["png"] }
